# geng

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  fix_and_format.sh  run_test.sh  vcpkg.json
.github/workflows/: ci.yaml
bench/: bench.cpp
cmake/: CompilerTooling.cmake  Docs.cmake  TargetHelpers.cmake  gengConfig.cmake.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  circle_video.cpp  d20_advantage.cpp  figure_png.cpp  function_explorer.cpp  growing_sine.cpp  lissajous.cpp  live_signals.cpp  lsan_suppressions.cpp  mandelbrot.cpp  penguins.cpp  population_bars.cpp  population_data.hpp  scatter_shapes.cpp
include/: Logger.hpp
include/geng/: Bounds2D.hpp  Figure.hpp  FontAtlas.hpp  Interactor.hpp  OffscreenRenderer.hpp  Renderer.hpp  Series.hpp  Theme.hpp  View.hpp  Window.hpp  WindowApp.hpp  geng.hpp
include/libname/: div.hpp
playground/: CMakeLists.txt  main.cpp  plot.hpp  render_png.cpp
shaders/: bar.frag.slang  bar.vert.slang  display.frag.slang  fullscreen.vert.slang  line.frag.slang  line.vert.slang  marker.frag.slang  marker.vert.slang  text.frag.slang  text.vert.slang
src/: Bounds2D.cpp  CMakeLists.txt  Figure.cpp  FigureScene.hpp  FontAtlas.cpp  Interactor.cpp  OffscreenRenderer.cpp  Renderer.cpp  StbTrueTypeImpl.cpp  Theme.cpp  Window.cpp  WindowApp.cpp  div.cpp
tests/: .clang-tidy  BarTests.cpp  CMakeLists.txt  CategoricalTests.cpp  ScatterTests.cpp  TestTypes.hpp  UmbrellaTests.cpp  example_test.cpp
